background and start button added

--- a/static/chess-board.css
+++ b/static/chess-board.css
@@ -6,6 +6,8 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background: url(img/background.jpg);
+    background-size: cover;
 }
 
 .chessboard {
